<resources>
    <string name="app_name">Ardour Remote</string>
    <string name="new_connection">New Connection</string>
    <string name="host">Host</string>
    <string name="recent_connections">Recent Connections</string>
    <string name="default_ip">192.168.</string>
    <string name="edit_connection">Edit Connection</string>
    <string name="delete_connection">Delete Connection</string>
    <string name="name">Name</string>
    <string name="name_optional">Name\n(optional)</string>
    <string name="create">Create</string>
    <string name="connect">Connect</string>
    <string name="receive_port">Receive Port</string>
    <string name="send_port">Send Port</string>
    <string name="add_new_connection">Add new connection</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_toggle">Record Toggle</string>
    <string name="play_stop_btn">Play/Stop Button</string>
    <string name="stop_and_trash">Stop and Trash</string>
    <string name="stop_transport">Stop transport</string>
    <string name="start_transport_button">Start transport button</string>
    <string name="stop_transport_button">Stop transport button</string>
    <string name="start_transport">Start transport</string>
    <string name="transport_speed">Transport speed</string>
    <string name="transport_to_end">Transport to end</string>
    <string name="transport_to_next_bar">Transport to next bar</string>
    <string name="transport_to_previous_bar">Transport to previous bar</string>
    <string name="transport_to_start">Transport to start</string>
    <string name="heartbeat">heart beat</string>
</resources>