<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="model"
            type="rtbo.ardourremote.view.RemoteViewModel"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RemoteActivity"
        >

        <TextView
            android:id="@+id/remote_human_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.connectionDesc}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="192.168.1.23\u21913192\u21938000"
            />

        <TextView
            android:id="@+id/timecode_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{model.timecode}"
            android:textColor="@color/position_txt"
            android:textSize="@dimen/position_txt_size"
            app:layout_constraintEnd_toStartOf="@+id/bbt_txt"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:00:21:29"
            />

        <TextView
            android:id="@+id/bbt_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.bbt}"
            android:textColor="@color/position_txt"
            android:textSize="@dimen/position_txt_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/timecode_txt"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="007|03|0734"
            />

        <TextView
            android:id="@+id/speed_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/transport_speed"
            android:text="@{model.speedTxt}"
            app:layout_constraintBottom_toBottomOf="@+id/bbt_txt"
            app:layout_constraintStart_toEndOf="@+id/bbt_txt"
            app:layout_constraintTop_toTopOf="@+id/bbt_txt"
            tools:text="x1.5"
            />

        <ImageButton
            android:id="@+id/record_toggle_btn"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/record_toggle"
            android:onClick="@{() -> model.recordToggle()}"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/stop_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timecode_txt"
            app:srcCompat="@drawable/ic_baseline_record_24"
            />

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:contentDescription="@string/start_transport"
            android:onClick="@{() -> model.play()}"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/stop_forget_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stop_btn"
            app:layout_constraintTop_toTopOf="@+id/stop_btn"
            app:srcCompat="@drawable/ic_baseline_play_24"
            app:tint="@color/play_disabled"
            />

        <ImageButton
            android:id="@+id/stop_btn"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/stop_transport"
            android:onClick="@{() -> model.stop()}"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toStartOf="@+id/play_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/record_toggle_btn"
            app:layout_constraintTop_toTopOf="@+id/record_toggle_btn"
            app:srcCompat="@drawable/ic_baseline_stop_24"
            app:tint="@color/stop_disabled"
            />

        <ImageButton
            android:id="@+id/stop_forget_btn"
            android:layout_width="@dimen/icon_btn_size"
            android:layout_height="@dimen/icon_btn_size"
            android:layout_marginStart="8dp"
            android:clickable="@{model.stopTrashEnabled}"
            android:contentDescription="@string/stop_and_trash"
            android:onClick="@{() -> model.stopTrash()}"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/play_btn"
            app:layout_constraintTop_toTopOf="@+id/play_btn"
            app:srcCompat="@drawable/ic_baseline_stop_trash_24"
            app:tint="@color/rec_enabled"
            />

        <ImageView
            android:id="@+id/heartbeat_led"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/remote_human_desc"
            app:layout_constraintTop_toTopOf="@+id/remote_human_desc"
            app:srcCompat="@drawable/ic_baseline_record_24"
            tools:tint="@color/stop_disabled"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>